Bug 1743346 - Make `TextInputHandler::HandleEvent` handle native key bindings first, then, our shortcut keys r=smaug

Oddly, `TextInputHandler` which is keyboard event handler for
`<input type="text">` and `<textarea>` handles our shortcut keys
first, then, refer native key bindings.  So if a key combination
matches in both definitions, our shortcut key wins.

On the other hand, if `HTMLEditor` has focus, `keypress` event
listener on the `Document` node hanldes native key bindings:
https://searchfox.org/mozilla-central/rev/70b32246fce5ca1f53af573a21c1939df58cb969/editor/libeditor/EditorEventListener.cpp#641-644

Then, global key listener will be run later:
https://searchfox.org/mozilla-central/rev/70b32246fce5ca1f53af573a21c1939df58cb969/dom/events/GlobalKeyListener.cpp#163-164

Perhaps, it's better to refer native key bindings first because
unusual shortcut key definition must be caused by customization
by the user in the system level.

Therefore, this patch makes the order switchable with the new
pref for making it easier to back it out.

Differential Revision: https://phabricator.services.mozilla.com/D132451